fix up and document events api
